k8s/spree-deployment-ingcon.yaml
apiVersion: v1
kind: Service
metadata:
  name: spree
  namespace: spree-app
spec:
  type: ClusterIP
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: spree

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: spree
    ver: "1"
  name: spree
  namespace: spree-app
  selfLink: /apis/extensions/v1beta1/namespaces/spree-app/deployments/spree
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spree
      ver: "1"
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spree
        ver: "1"
    spec:
      containers:
      - image: damdamdock/dam-spree:1
        imagePullPolicy: Always
        name: spree
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        resources:
          requests:
            cpu: 1000m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
