k8s/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: spree-monitor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.damdam.me
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
